--- a/css/styles.css
+++ b/css/styles.css
@@ -19958,6 +19958,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  height: 100%;
 }
 #layoutDefault #layoutDefault_content {
   min-width: 0;
