chore: add moove testimonial

--- a/css/styles.css
+++ b/css/styles.css
@@ -21097,7 +21097,7 @@ a:hover {
 .testimonial-image.intelligaia,
 .testimonial-image.payuFinance,
 .testimonial-image.vtex,
-.testimonial-image.zoitech, .testimonial-image.lahaus, .testimonial-image.loggi{
+.testimonial-image.zoitech, .testimonial-image.lahaus, .testimonial-image.loggi, .testimonial-image.moove{
   width: 9rem;
   height: 9rem;
 }
