support inDrive logo and testimonial

--- a/css/styles.css
+++ b/css/styles.css
@@ -21100,7 +21100,8 @@ a:hover {
 .testimonial-image.zoitech,
 .testimonial-image.lahaus,
 .testimonial-image.loggi,
-.testimonial-image.moove {
+.testimonial-image.moove,
+.testimonial-image.inDrive {
   width: 9rem;
   height: 9rem;
 }
