ui: fix layout of page (#2)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,69 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+h3{
+  font-size: 1.3rem;
+}
+@media (min-width: 1200px){
+h2, .h2 {
+    font-size: 1.4rem;
+    margin-bottom: 0.5rem;
+}
+p{
+  margin-bottom: 1rem 
+}
+}
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
+}
 
+@media (min-width: 576px) {
+  .container-sm,
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 1140px !important;
+  }
+}
+@media (min-width: 1500px) {
+  .container-xxl,
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 1440px;
+  }
+}
