--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,11 @@ body {
 h3{
   font-size: 1.3rem;
 }
+h5,
+.h5 {
+  font-size: 1.1rem;
+}
+
 @media (min-width: 1200px){
 h2, .h2 {
     font-size: 1.4rem;
