--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -93,7 +93,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #69707a;
-  background-color: #f2f6fc;
+  background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -6295,7 +6295,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0061f2;
+  color: #4c4c4c;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
 }
@@ -6306,7 +6306,7 @@ fieldset:disabled .btn {
 }
 .nav-link:hover,
 .nav-link:focus {
-  color: #004ec2;
+  color: #7147e8 ;
   text-decoration: none;
 }
 .nav-link.disabled {
@@ -19809,18 +19809,6 @@ body {
   background-color: transparent;
 }
 
-#layoutDefault {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-#layoutDefault #layoutDefault_content {
-  min-width: 0;
-  flex-grow: 1;
-}
-#layoutDefault #layoutDefault_footer {
-  min-width: 0;
-}
 
 .content-skewed {
   perspective: 1500px;
