--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5845,6 +5845,16 @@ fieldset:disabled .btn {
   border-radius: 0.25rem;
 }
 
+.slider-container {
+  position: relative;
+}
+
+.slide-item {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
 .fade {
   transition: opacity 0.15s linear;
 }
