--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,7 +88,7 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Metropolis', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
