--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -98,6 +98,38 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.tag {
+  display: block;
+  z-index: 1;
+  top: 50px;
+  position: relative;
+  width: 300px;
+  height: 50px;
+}
+
+.tag::before,
+.tag::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  z-index: -1;
+  background-color: #E2DAFA;
+}
+
+.tag::before {
+  transform: skew(45deg);
+  left: 32px;
+}
+
+.tag::after {
+  transform: skew(-45deg);
+  right: 32px;
+  left: auto;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
