--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -101,10 +101,8 @@ body {
 .tag {
   display: block;
   z-index: 1;
-  top: 50px;
+  top: 0;
   position: relative;
-  width: 300px;
-  height: 50px;
 }
 
 .tag::before,
@@ -121,12 +119,12 @@ body {
 
 .tag::before {
   transform: skew(45deg);
-  left: 32px;
+  left: 34px;
 }
 
 .tag::after {
   transform: skew(-45deg);
-  right: 32px;
+  right: 34px;
   left: auto;
 }
 
