Add Try openmetadata component (#136)
* remove assets

* add components for icons

* update active tab colors

* update styling for mobile view

* update the icons

* add integrations component

* add try openmetadata component

* add new tag in card

* update new tag

---------

Co-authored-by: Sachin Chaurasiya <sachinchaurasiyachotey87@gmail.com>

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -98,6 +98,36 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.tag {
+  display: block;
+  z-index: 1;
+  top: 0;
+  position: relative;
+}
+
+.tag::before,
+.tag::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  z-index: -1;
+  background-color: #E2DAFA;
+}
+
+.tag::before {
+  transform: skew(45deg);
+  left: 34px;
+}
+
+.tag::after {
+  transform: skew(-45deg);
+  right: 34px;
+  left: auto;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
