add custom class for max width and shadow bg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,6 +45,14 @@ p{
   margin-left: auto;
 }
 
+.custom-container {
+  @apply max-w-[1440px] mx-auto;
+}
+
+.shadow-bg {
+  @apply bg-gradient-to-b from-[#F1EDFD] to-white
+}
+
 @media (min-width: 576px) {
   .container-sm,
   .container {
