--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,10 @@ p{
   @apply bg-gradient-to-b from-[#F1EDFD] to-white
 }
 
+.bg-gradient {
+  @apply bg-gradient-to-tr from-[#0B3547] to-[#176B8F]
+}
+
 @media (min-width: 576px) {
   .container-sm,
   .container {
