--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -98,6 +98,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .tag {
   display: block;
   z-index: 1;
