--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,31 @@ p{
   @apply bg-gradient-to-b from-[#F1EDFD] to-white
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
+  .left-top-box {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  
+  .right-bottom-box {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .left-top-box {
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+  }
+
+  .right-bottom-box {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+}
+
+@media (min-width: 767px) {
   .slick-slider .slick-dots li {
     margin: 0 0.2rem;
   }
