--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,30 @@ p{
   @apply bg-gradient-to-b from-[#F1EDFD] to-white
 }
 
+.nav-strip-btn {
+  border: none;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+}
+
+.side-block {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .nav-strip-btn {
+    border: 1px solid #FFFFFF;
+    text-decoration: none;
+  }
+}
+
+@media (min-width: 800px) {
+  .side-block {
+    display: block;
+  }
+}
+
 @media (max-width: 1023px) {
   .left-top-box {
     border-top-left-radius: 8px;
