--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,9 +53,57 @@ p{
   @apply bg-gradient-to-b from-[#F1EDFD] to-white
 }
 
+.nav-strip-btn {
+  border: none;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+}
+
+.side-block {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .nav-strip-btn {
+    border: 1px solid #FFFFFF;
+    text-decoration: none;
+  }
+}
+
+@media (min-width: 800px) {
+  .side-block {
+    display: block;
+  }
+}
+
+@media (max-width: 1023px) {
+  .left-top-box {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  
+  .right-bottom-box {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .left-top-box {
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+  }
+
+  .right-bottom-box {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+}
+
 @media (max-width: 767px) {
   .slick-slider .slick-dots li {
-    margin: 0 0.2rem;
+    margin: 0 2px;
   }
 }
 
