--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,7 +88,7 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Metropolis', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -96,6 +96,77 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.tag {
+  display: block;
+  z-index: 1;
+  top: 0;
+  position: relative;
+}
+
+.tag::before,
+.tag::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  z-index: -1;
+  background-color: #E2DAFA;
+}
+
+.tag::before {
+  transform: skew(45deg);
+  left: 34px;
+}
+
+.tag::after {
+  transform: skew(-45deg);
+  right: 34px;
+  left: auto;
+}
+
+.slider-container.testimonial-content {
+  max-width: 330px;
+  margin: auto;
+  padding: 40px 0;
+}
+.slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto; 
+  background-color: white;
+}
+
+@media (min-width: 640px) {
+  .slider-container.testimonial-content {
+    max-width: 500px;
+  }
+}
+
+@media (min-width: 768px) {
+  .slider-container.testimonial-content {
+    max-width: 650px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .slider-container.testimonial-content {
+    max-width: 800px;
+  }
+}
+
+@media (max-width: 640px) {
+  .integration {
+    overflow-x: scroll;
+  }
 }
 
 hr {
@@ -212,7 +283,6 @@ a {
 }
 a:hover {
   color: #004ec2;
-  text-decoration: underline;
 }
 
 a:not([href]):not([class]),
@@ -5843,6 +5913,16 @@ fieldset:disabled .btn {
   padding: 0.5rem 0.75rem;
   font-size: 0.75rem;
   border-radius: 0.25rem;
+}
+
+.slider-container {
+  position: relative;
+}
+
+.slide-item {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
 }
 
 .fade {
@@ -20324,8 +20404,8 @@ section {
   text-align: center;
 }
 .card-team .card-body .card-team-img {
-  height: 10rem;
-  width: 10rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 100%;
   margin-top: -4.5rem;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(33, 40, 50, 0.2);
