Add testimonial updates (#168)
* remove two column and add more and less buttons

* updated button text size

* refactor: change function name

* fix layout shifting

* update testimonial layouting

* update testimonial company logos

* update beeline logo

* add mew testimonial

* updated slick dots

* fixed layout shift issue

* add senzai logo in client component

* add clients logo for header

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -133,7 +133,7 @@ html {
 }
 
 .slider-container.testimonial-content {
-  max-width: 330px;
+  max-width: 350px;
   margin: auto;
   padding: 40px 0;
 }
@@ -143,6 +143,14 @@ html {
   align-items: center;
   height: auto; 
   background-color: white;
+}
+
+.slick-dots {
+  height: 30px;
+}
+
+.slick-list {
+  height: auto;
 }
 
 @media (min-width: 640px) {
