--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -189,6 +189,114 @@ html {
   text-decoration: underline;
 }
 
+.hs-form {
+  background-color: white;
+  box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.12);
+  padding: 48px 36px;
+  border-radius: 4px;
+}
+
+@media (max-width: 640px) {
+  .hs-form {
+    padding: 32px 24px;
+  }
+}
+
+.hubspotForm label {
+  font-weight: 600; 
+  font-size: 1rem;
+  color: #292929;
+}
+
+.hubspotForm fieldset.form-columns-1 .input {
+  width: 100% !important;
+  margin-right: 0 !important;
+}
+
+#hubspotForm .hs-form-booleancheckbox label {
+  text-transform: none;
+  display: flex;
+  justify-content: flex-start;
+  gap: 0.75rem; 
+  margin-top: 1rem; 
+}
+
+#hubspotForm .hs-form-booleancheckbox label span {
+  font-size: 14px;
+  color: #555555;
+  font-weight: 400;
+}
+
+#hubspotForm input[type="checkbox"] {
+  width: 1.25rem !important; 
+  height: 1.25rem !important;
+}
+
+#hubspotForm .hs_submit {
+  text-align: center;
+  margin-top: 2rem;
+  width: 100%;
+}
+
+.hubspotForm .hs-input,
+.hubspotForm fieldset.form-columns-1 .hs-input {
+  margin: 0.2rem 0 1.6rem; 
+  padding: 0.5rem;
+  width: 100% !important;
+  outline: none;
+  font-weight: 500; 
+  font-size: 0.875rem;
+  border-radius: 0.125rem; 
+  overflow: hidden;
+  background-color: white;
+  border: 1px solid #d1d5db;
+  height: 58px;
+}
+
+.hubspotForm .hs-input:focus-visible {
+  border-color: var(--color-secondary);
+  border-width: 2px;
+}
+
+.hubspotForm fieldset.form-columns-1 .hs-fieldtype-textarea {
+  height: 9rem;
+  resize: none;
+  display: inline-block;
+}
+
+.hubspotForm fieldset {
+  margin-top: 0.75rem !important; 
+}
+
+.hubspotForm .form-columns-2 {
+  margin-top: 2rem;
+}
+
+.hubspotForm .form-columns-2 .hs-form-field {
+  width: 100% !important;
+  margin-top: 0.75rem !important; 
+}
+
+.hubspotForm fieldset.form-columns-2 .input {
+  margin-right: 0 !important;
+}
+
+.hubspotForm .hs-button {
+  padding: 0.75rem 3.5rem;
+  font-size: 18px;
+  cursor: pointer;
+  color: white;
+  background-color: #7147E8;
+  width: 100%;
+  border-radius: 2px;
+  text-transform: uppercase;
+}
+
+.hubspotForm .hs-error-msg {
+  color: #ef4444; 
+  font-size: 0.875rem;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
