--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -185,6 +185,21 @@ html {
   background: linear-gradient(118.15deg, #F2F7F9 32.05%, #FBF4F4 81.44%);
 }
 
+.case-study-testimonial {
+  background: linear-gradient(180deg, #F1EDFD 0%, rgba(241, 237, 253, 0.3) 100%);
+}
+
+.slider-container {
+  background-color: white;
+}
+
+.slick-slider .slick-track {
+  display: flex;
+  gap: 16px;
+  background-color: white;
+  padding: 5px 0px;
+}
+
 .lp-card:hover .header-text {
   text-decoration: underline;
 }
